Thu Jul 27 07:37:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/tao.doxygen:
        * etc/tao_portableserver.doxygen:
          Set ignore prefix

        * Kokyu/Dispatcher_Task.i
        * Kokyu/Dispatcher_Task.inl
          Renamed .i to .inl so that we can have a look how subversion stores
          this in the history

        * Kokyu/Dispatcher_Task.cpp
        * Kokyu/Dispatcher_Task.h
        * Kokyu/Makefile.am
          Updated for the change above.

Wed Jul 26 07:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/sets-manager.py:
          Fixed typo

Wed Jul 26 07:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * html/Stats/index.shtml:
        * docs/ACE-bug-process.html:
          Updated documentation to point to the new svn repository

Tue Jul 25 21:51:07 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/PythonACE/fuzz/max_project_len.py
        * bin/PythonACE/fuzz/inline.py

          Fixed errors in these checks.

Tue Jul 25 20:52:51 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/PythonACE/fuzz/cpp_inline.py

          Fixed this check, it was incorrectly matching ACE_INLINES inside
          defines and comments.

Tue Jul 25 20:16:26 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/svn/svn-prefs.reg
        * docs/svn/config

          Updated to add global-ignores to mimic .cvsignore functionality.

Tue Jul 25 19:40:54 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/PythonACE/__init__.py

          This enables PythonACE to be loaded as a module.

        * bin/PythonACE/fuzz/check_includes.py
        * bin/PythonACE/fuzz/no_conflict_markers.py

          Fixed these checks, they were incorrectly flagging errors.

        * bin/fuzz.py

          Command line fuzz client that uses the PythonACE fuzz module.

        * bin/sets-manager.py
